--- a/templates/inventory.tmpl
+++ b/templates/inventory.tmpl
@@ -2,11 +2,4 @@
 ${main_master_ip} privateIP=${main_master_privateIP}
 
 [k3s-masters]
-%{for index, ip in masters_ips ~}
-${ip} privateIP=${masters_privateIPs[index]}
-%{endfor ~}
-
-[k3s-workers]
-%{for index, ip in workers_ips ~}
-${ip} privateIP=${workers_privateIPs[index]}
-%{endfor ~}
+${masters_lb_ip}
